Avoid menu text to break the layout

--- a/src/resources/sass/layout/top/_top-menu.scss
+++ b/src/resources/sass/layout/top/_top-menu.scss
@@ -23,9 +23,9 @@
 		}
 
 		&.top-menu__left {
+			min-width: 105px;
 			padding: 20px;
 			color: $color-complement-sky;
-			//max-height: 70px;
 
 			.icon {
 				font-size: 18px;
